# simpleDNN

./: CMakeLists.txt  buildme.sh
include/: Layer.hpp  Matrix.hpp  NN.hpp  Neuron.hpp
include/utils/: MatrixMultiply.hpp
src/: Layer.cpp  Matrix.cpp  NN.cpp  Neuron.cpp  main.cpp
src/utils/: MatrixMultiply.cpp
